Olena fixed horizontal scroll in drop-down

--- a/client/src/components/DropDownMenuItem/DropDownMenuItem.module.css
+++ b/client/src/components/DropDownMenuItem/DropDownMenuItem.module.css
@@ -17,6 +17,7 @@
 }
 
 .categoryLink{
+    max-width: 100%;
     cursor: pointer;
 }
 
