--- a/client/src/components/Layout/Layout.module.css
+++ b/client/src/components/Layout/Layout.module.css
@@ -10,6 +10,7 @@
 
 .main{
     flex: 1 1 auto;
+    position: relative;
 
 }
 
